<resources>
    <string name="app_name">Firebase Challenge</string>
    <string name="kratos_background">kratos_background</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="criar_game">Criar game</string>
    <string name="imagem_jogo">Imagem jogo</string>
    <string name="lancamento">Lançamento:</string>
    <string name="back_to_games_list">Back to games list</string>
    <string name="nome">Nome</string>
    <string name="created_at">Created at</string>
    <string name="descricao">Descrição</string>
    <string name="save_game">Save Game</string>
    <string name="image_game">Image game</string>
</resources>